try/catch around all command calls SERVER-3923